--- a/PolyhedronClass/PolyhedronClass.csproj
+++ b/PolyhedronClass/PolyhedronClass.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Body.cs" />
+    <Compile Include="Edge.cs" />
+    <Compile Include="Face.cs" />
     <Compile Include="PlatonBody.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
